<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.yafp.gimmepassword.GimmePassword">

    <TextView
        android:id="@+id/t2_generatedPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:drawable/alert_light_frame"
        android:clickable="false"
        android:gravity="center"
        android:hint="@string/all_tabs_password_field"
        android:text="@string/all_tabs_password_field"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/t2_appIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/t2_buttonGenerate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="onGenerateXKCD"
        android:text="@string/all_tabs_button_generate"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/t2_generatedPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/t2_passwordLength"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="1-10"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2_words"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/t2_words"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:longClickable="false"
        android:text="@string/t2_editText_headline_wordcount"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:hint="@string/t2_editText_headline_wordcount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2_tv_description"
        android:inputType="none" />

    <EditText
        android:id="@+id/t2_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/t4_language"
        android:focusable="false"
        android:longClickable="false"
        android:text="@string/t2_editText_headline_language"
        android:textIsSelectable="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2_passwordLength"
        android:inputType="none" />

    <Spinner
        android:id="@+id/t2_seperatorSelection"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/t2_separator_array"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2_words" />

    <Spinner
        android:id="@+id/t2_languageSelection"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/t2_country_array"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2_language" />

    <TextView
        android:id="@+id/t2_tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/t2_textview_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/t2_appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:alpha="0.3"
        android:contentDescription="@string/all_tabs_footer_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/app_icon_footer_black" />


</android.support.constraint.ConstraintLayout>

